[package]
name = "m5stack-atom3-bme688"
version = "0.1.0"
edition = "2021"
resolver = "2"

[package.metadata.esp-idf-sys]
esp_idf_version = "v5.3.2"
esp_idf_sdkconfig_defaults = "sdkconfig.defaults"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []

# Main binary: Full BME688 sensor + display
[[bin]]
name = "m5stack-atom3-bme688"
path = "src/main.rs"

# Test binary: Display only (no sensor)
[[bin]]
name = "test_screen"
path = "src/test_screen.rs"

[dependencies]
anyhow = "1"
log = "0.4"
esp-idf-svc = { version = "0.51", default-features = false, features = ["alloc"] }
esp-idf-hal = "0.45"
mipidsi = "0.9.0"
embedded-graphics = "0.8"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7" }
embedded-hal = "1.0"
heapless = "0.8"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }
